@@ -837,11 +837,11 @@
 
               <div class="card-wrapper">
                 <div class="card text-center">
-                  <img class="card-img-top" src="/img/reviews/SoupMario.png" alt="SoupMario" />
+                  <img class="card-img-top" src="/img/reviews/static.png" alt="static" />
                   <div class="card-body">
-                    <h3>SoupMario</h3>
+                    <h3>static</h3>
                     <p class="card-text">
-                      92/10 very epic and cool site 😎 👍
+                      when add brrr i sad 9/10
                     </p>
                   </div>
                 </div>
