@@ -17,6 +17,9 @@ NOTE: Make sure you refresh the page! Sometimes you will not get the lastest upd
 ^ Means something was upgraded or changed
 - Means something was removed
 ------------------------------------------------------------
+Nov, 7
+^ Added more reviews
+------------------------------------------------------------
 Nov, 5
 LAX1DUDE has announced that he is going to stop development on eaglercraft, sadge
 + Added Happy Hop
